# fpga_loader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: configfs.md  sysfs.md  zynq7000-flow.md
inc/: dt_overlay.hpp  file_utils.hpp  fpga_manager.hpp
scripts/: bit-to-bin.sh  mount-configfs.sh
src/: dt_overlay.cpp  file_utils.cpp  fpga_manager.cpp  main.cpp
tests/: CMakeLists.txt  helpers.hpp  test_dt_overlay.cpp  test_file_utils.cpp  test_fpga_manager.cpp
